// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    23
     
    expenses
     totaling 
    $0.00
  </h2>
</div>
`;

exports[`should render ExpensesSummary correctly with one expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totaling 
    $0.00
  </h2>
</div>
`;
